--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             background-position: center;
             background-repeat: no-repeat;
             /* IMPORTANT: This is now your profile photo as the background */
-            background-image: url("images/coverphoto.jpeg"); /* Using a wider placeholder for background */
+            background-image: url("coverphoto.jpeg"); /* Using a wider placeholder for background */
         }
 
         .image-overlay {
