--- a/index.html
+++ b/index.html
@@ -174,16 +174,16 @@
             <a href="#hero" class="text-2xl font-extrabold text-white tracking-tight">Kamran Akhtar</a>
             <div class="hidden md:flex space-x-8 text-lg">
                 <a href="#about" class="header-link">About</a>
-                <a href="#portfolio" class="header-link">Portfolio</a>
-                <a href="#writing" class="header-link">Writing</a>
+                <a href="#blog" class="header-link">Blog</a>
+                <a href="#photojournalism" class="header-link">Photos</a>
                 <a href="#skills" class="header-link">Skills</a>
                 <a href="#contact" class="header-link">Contact</a>
             </div>
             <div class="md:hidden">
                 <select id="mobile-nav" class="block w-full rounded-md border-gray-700 shadow-sm focus:border-blue-500 focus:ring-blue-500 text-gray-200 bg-gray-800">
                     <option value="#about">About</option>
-                    <option value="#portfolio">Portfolio</option>
-                    <option value="#writing">Writing</option>
+                    <option value="#blog">Blog</option>
+                    <option value="#photojournalism">Photos</option>
                     <option value="#skills">Skills</option>
                     <option value="#contact">Contact</option>
                 </select>
@@ -203,108 +203,79 @@
                     Multimedia Journalist & Documentary Producer
                 </p>
                 <p class="text-xl text-gray-300 mb-6 font-light">
-                    I capture powerful stories through compelling photography, authentic human voices, and sharp, impactful writing. My work covers human rights, minorities, migrant labor, cyber-crime, and digital policy frameworks.
+                   I am an independent journalist and documentary producer with a strong focus on ground reporting, investigative journalism, and policy research. My work blends field investigations with a solution-oriented journalism approach, aiming to highlight systemic issues while also exploring pathways for change.
+
+Over the past few years, I have reported from diverse regions across India—from uncovering illegal sand mining operations in Manasbal, Jammu & Kashmir, to exploring the rich tapestry of Kerala’s food, culture, and travel stories. In 2023, I investigated an alleged case of sexual misconduct involving a student from RIT College during the RITU festival in Kottayam. Despite inconsistencies in the FIR, media narratives, and hospital records, I chose not to publish the story due to safety concerns surrounding the survivor—an editorial decision grounded in ethics and empathy.
+I am committed to storytelling that informs, empowers, and drives impact. If you're looking for a journalist who believes in research-driven narratives, ethical storytelling, and deep on-the-ground reporting, you’re at the right place.
                 </p>
                 <a href="#portfolio" class="inline-block px-10 py-4 rounded-full text-xl font-semibold btn-primary shadow-lg">Explore My Work & Stories</a>
             </div>
         </section>
 
-        <!-- Portfolio Section -->
-        <section id="portfolio" class="mb-24 scroll-mt-24">
-            <h2 class="text-4xl md:text-5xl font-bold text-center section-heading mb-12">My Portfolio</h2>
+                <!-- Blog Section (New) -->
+        <section id="blog" class="mb-24 scroll-mt-24">
+            <h2 class="text-4xl md:text-5xl font-bold text-center section-heading mb-12">My Latest Articles</h2>
             <p class="text-lg text-center max-w-3xl mx-auto text-gray-400 mb-16">
-                A curated collection of my journalistic endeavors, from in-depth reports and multimedia productions to compelling photojournalism and impactful unpublished investigations.
+                Here you'll find my latest insights, analyses, and reports on various topics, from human rights to digital policy.
             </p>
 
-            <!-- Journalistic Works Sub-section -->
-            <h3 class="text-3xl md:text-4xl font-bold text-center section-heading mb-10 mt-16">Journalistic Works</h3>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
-                <!-- Project Card 1: Research & Drafting for 3 Book Projects -->
+                <!-- Blog Post Card 1 -->
                 <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">Research & Drafting for 3 Book Projects</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Assisted in drafting three in-progress books focusing on India-US Tech Cooperation, US-China Tech Rivalry, and India-Bangladesh Bilateral Relations.</p>
-                    <a href="#" onclick="alert('This project is under development. More details coming soon!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">View Details</a>
+                    <img src="https://placehold.co/600x300/2D2D2D/E0E0E0?text=Article+Image+1" alt="Article Thumbnail" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
+                    <h4 class="text-2xl font-bold text-white mb-3">The Shifting Landscape of Digital Privacy</h4>
+                    <p class="text-gray-400 mb-4 text-base flex-grow">An in-depth look into how new regulations and technological advancements are reshaping our digital rights and responsibilities.</p>
+                    <a href="#" onclick="alert('This is a placeholder article. Link to your actual article here!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Article</a>
                 </div>
-                <!-- Project Card 2: Digital Content Migration (ORF Intern) -->
+
+                <!-- Blog Post Card 2 -->
                 <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">Digital Content Migration (ORF Intern)</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Successfully migrated over 800 articles from ORF's legacy website to its redesigned platform, ensuring metadata consistency and formatting.</p>
-                    <a href="#" onclick="alert('This project is under development. More details coming soon!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Learn More</a>
+                    <img src="https://placehold.co/600x300/2D2D2D/E0E0E0?text=Article+Image+2" alt="Article Thumbnail" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
+                    <h4 class="text-2xl font-bold text-white mb-3">Voices from the Margins: Migrant Labor Stories</h4>
+                    <p class="text-gray-400 mb-4 text-base flex-grow">A series of compelling narratives from migrant workers, shedding light on their daily struggles and resilience.</p>
+                    <a href="#" onclick="alert('This is a placeholder article. Link to your actual article here!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Article</a>
                 </div>
-                <!-- Project Card 3: Investigative Work: Kerala College Student Assault Case -->
+
+                <!-- Blog Post Card 3 -->
                 <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">Investigative Reporting: Kerala Case</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Conducted sensitive investigative work in Pampady village, Kerala, uncovering inconsistencies in police action regarding a college student's assault case.</p>
-                    <a href="#" onclick="alert('This is a sensitive, unpublished investigation. Please contact me for details.'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Case Study</a>
+                    <img src="https://placehold.co/600x300/2D2D2D/E0E0E0?text=Article+Image+3" alt="Article Thumbnail" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
+                    <h4 class="text-2xl font-bold text-white mb-3">Cybersecurity Threats in the Age of AI</h4>
+                    <p class="text-gray-400 mb-4 text-base flex-grow">Examining the evolving landscape of cyber-crime and the challenges posed by artificial intelligence to digital security.</p>
+                    <a href="#" onclick="alert('This is a placeholder article. Link to your actual article here!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Article</a>
                 </div>
-                <!-- Project Card 4: MOJO Documentary: Kerala's Rubber Farmer -->
+
+                <!-- Blog Post Card 4 -->
                 <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">MOJO Documentary: Kerala's Rubber Farmer</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Produced a mobile journalism (MOJO) documentary on the tales of rubber farmers in Kerala, highlighting their challenges and contributions.</p>
-                    <a href="https://www.youtube.com/watch?v=YOUR_VIDEO_ID" target="_blank" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Watch Documentary</a>
+                    <img src="https://placehold.co/600x300/2D2D2D/E0E0E0?text=Article+Image+4" alt="Article Thumbnail" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
+                    <h4 class="text-2xl font-bold text-white mb-3">Human Rights in Conflict Zones: A Photo Essay</h4>
+                    <p class="text-gray-400 mb-4 text-base flex-grow">A visual journey through the lives affected by conflict, capturing the human spirit amidst adversity.</p>
+                    <a href="#" onclick="alert('This is a placeholder article. Link to your actual article here!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">View Photo Essay</a>
                 </div>
-                <!-- Project Card 5: Published Article: Jew Street's Legacy, Kochi -->
+
+                 <!-- Blog Post Card 5 -->
                 <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">Published Article: Jew Street's Legacy</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Authored "JEW STREET'S LEGACY: UNEARTHING KOCHI'S CULTURAL HISTORY" for IIMC VOICE, exploring the rich heritage of Kochi.</p>
-                    <a href="#" onclick="alert('Please replace # with the actual article link!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Article</a>
+                    <img src="https://placehold.co/600x300/2D2D2D/E0E0E0?text=Article+Image+5" alt="Article Thumbnail" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
+                    <h4 class="text-2xl font-bold text-white mb-3">The Future of Journalism: AI and Ethics</h4>
+                    <p class="text-gray-400 mb-4 text-base flex-grow">Exploring the ethical considerations and potential impact of artificial intelligence on journalistic practices.</p>
+                    <a href="#" onclick="alert('This is a placeholder article. Link to your actual article here!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Article</a>
                 </div>
-                <!-- Project Card 6: News Video Production (ThePrint Intern) -->
+
+                <!-- Blog Post Card 6 -->
                 <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">News Video Production (ThePrint Intern)</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Recorded, edited, and published news videos for ThePrint's digital platforms, covering socio-political and economic trends.</p>
-                    <a href="#" onclick="alert('Please replace # with the actual video samples link!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">View Samples</a>
-                </div>
-                <!-- Project Card 7: Radio Content Creation (Urdu RJ Sample) -->
-                <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">Radio Content Creation (Urdu RJ)</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Created content, including scripting, recording, and sound editing, for an Urdu RJ sample, showcasing audio production skills.</p>
-                    <a href="#" onclick="alert('Please replace # with the actual audio sample link!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Listen to Sample</a>
-                </div>
-                <!-- Project Card 8: Ground Reporting: Fisherman & River Ganga -->
-                <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <h4 class="text-2xl font-bold text-white mb-3">Ground Reporting: River Ganga</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Conducted ground reporting on the emotional tale of a fisherman and the River Ganga, capturing grassroots perspectives.</p>
-                    <a href="#" onclick="alert('Please replace # with the actual report link!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Report</a>
+                    <img src="https://placehold.co/600x300/2D2D2D/E0E0E0?text=Article+Image+6" alt="Article Thumbnail" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
+                    <h4 class="text-2xl font-bold text-white mb-3">Environmental Justice: Local Communities, Global Impact</h4>
+                    <p class="text-gray-400 mb-4 text-base flex-grow">Highlighting grassroots efforts and the disproportionate impact of environmental issues on vulnerable communities.</p>
+                    <a href="#" onclick="alert('This is a placeholder article. Link to your actual article here!'); return false;" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">Read Article</a>
                 </div>
             </div>
 
-            <!-- Photojournalism Sub-section 
-            <h3 class="text-3xl md:text-4xl font-bold text-center section-heading mb-10 mt-20">Photojournalism</h3>
-            <p class="text-lg text-center max-w-3xl mx-auto text-gray-400 mb-12">
-                My lens captures stories from the ground, transforming moments into visual narratives. Explore my photojournalism work, including mobile clicks, sequence storytelling, and street photography, directly on my Instagram.
-            </p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
-                <!-- Photojournalism Card 1: Mobile Clicks 
-                <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <!-- IMPORTANT: Replace this URL with a permanent link to your actual photo. 
-                    <img src="https://placehold.co/600x400/1A1A1A/E0E0E0?text=Mobile+Clicks+Photo" alt="Mobile Clicks Photojournalism" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
-                    <h4 class="text-2xl font-bold text-white mb-3">Mobile Clicks</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">A collection of compelling images captured using only a mobile camera, showcasing everyday life and unique perspectives.</p>
-                    <a href="https://www.instagram.com/kam.online/" target="_blank" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">View on Instagram</a>
-                </div>
-                <!-- Photojournalism Card 2: Sequence Storytelling 
-                <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <img src="https://placehold.co/600x400/1A1A1A/E0E0E0?text=Sequence+Storytelling" alt="Sequence Storytelling Photojournalism" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
-                    <h4 class="text-2xl font-bold text-white mb-3">Sequence Storytelling</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Photographs clicked in the fish market of Fort Kochi, narrating a story through a series of sequential images.</p>
-                    <a href="https://www.instagram.com/kam.online/" target="_blank" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">View on Instagram</a>
-                </div>
-                <!-- Photojournalism Card 3: Street Photography 
-                <div class="bg-gray-900 p-8 rounded-xl card-shadow flex flex-col h-full">
-                    <img src="https://placehold.co/600x400/1A1A1A/E0E0E0?text=Street+Photography" alt="Street Photography Photojournalism" class="w-full h-48 object-cover rounded-lg mb-4 border border-gray-700" />
-                    <h4 class="text-2xl font-bold text-white mb-3">Street Photography</h4>
-                    <p class="text-gray-400 mb-4 text-base flex-grow">Capturing candid moments and the essence of daily life on Jew Street at Kochi.</p>
-                    <a href="https://www.instagram.com/kam.online/" target="_blank" class="inline-block mt-4 px-6 py-2 rounded-full text-sm font-semibold btn-primary text-center">View on Instagram</a>
-                </div>
-            </div>
             <div class="text-center mt-12">
-                <a href="https://www.instagram.com/kam.online/" target="_blank" class="inline-block px-8 py-3 rounded-full text-lg font-semibold btn-primary shadow-md">See All Photojournalism on Instagram @kam.online</a>
+                <a href="#" onclick="alert('This would link to an archive or a dedicated blog page!'); return false;" class="inline-block px-8 py-3 rounded-full text-lg font-semibold btn-primary shadow-md">View All Articles</a>
             </div>
-            -->
+        </section>
 
 
-
+        <section id="photojournalism" class="mb-24 scroll-mt-24">
                     <h3 class="text-3xl md:text-4xl font-bold text-center section-heading mb-10 mt-20">Photojournalism</h3>
             <p class="text-lg text-center max-w-3xl mx-auto text-gray-400 mb-12">
                 My lens captures stories from the ground, transforming moments into visual narratives. Explore my photojournalism work, including mobile clicks, sequence storytelling, and street photography, directly on my Instagram.
@@ -351,7 +322,7 @@
                     <button class="carousel-dot w-3 h-3 bg-gray-500 rounded-full hover:bg-blue-400 transition focus:outline-none focus:ring-2 focus:ring-blue-400" data-index="2" aria-label="Go to slide 3"></button>
                     </div>
             </div>
-           
+        </section>   
                 <!-- Skills Section -->
         <section id="skills" class="mb-24 scroll-mt-24">
             <h2 class="text-4xl md:text-5xl font-bold text-center section-heading mb-12">My Skills</h2>
