--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             background-position: center;
             background-repeat: no-repeat;
             /* IMPORTANT: This is now your profile photo as the background */
-            background-image: url("images/coverphoto.jpeg"); /* Using a wider placeholder for background */
+            background-image: url("coverphoto.jpeg"); /* Using a wider placeholder for background */
         }
 
         .image-overlay {
@@ -284,7 +284,7 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
             <div class="relative w-full max-w-4xl mx-auto overflow-hidden rounded-xl card-shadow">
                 <div id="photoCarousel" class="flex transition-transform duration-500 ease-in-out">
                     <div class="carousel-item">
-                        <img src="images/p1.jpeg" alt="[Descriptive Alt Text for Photo 1]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <img src="p1.jpeg" alt="[Descriptive Alt Text for Photo 1]" class="w-full h-[500px] object-cover rounded-t-xl" />
                         <div class="p-8 bg-gray-900 rounded-b-xl">
                             <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 1</h4>
                             <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
@@ -292,7 +292,7 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
                     </div>
 
                     <div class="carousel-item">
-                        <img src="images/p2.jpeg" alt="[Descriptive Alt Text for Photo 2]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <img src="p2.jpeg" alt="[Descriptive Alt Text for Photo 2]" class="w-full h-[500px] object-cover rounded-t-xl" />
                         <div class="p-8 bg-gray-900 rounded-b-xl">
                             <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 2</h4>
                             <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
@@ -300,13 +300,20 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
                     </div>
 
                     <div class="carousel-item">
-                        <img src="images/p3.jpeg" alt="[Descriptive Alt Text for Photo 3]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <img src="p3.jpeg" alt="[Descriptive Alt Text for Photo 3]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <div class="p-8 bg-gray-900 rounded-b-xl">
+                            <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 3</h4>
+                            <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
+                        </div>
+
+                    <div class="carousel-item">
+                        <img src="p4.jpeg" alt="[Descriptive Alt Text for Photo 3]" class="w-full h-[500px] object-cover rounded-t-xl" />
                         <div class="p-8 bg-gray-900 rounded-b-xl">
                             <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 3</h4>
                             <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
                         </div>
                     </div>
-
+                        
                     </div>
 
                 <button id="prevBtn" class="absolute top-1/2 left-4 -translate-y-1/2 bg-gray-800 bg-opacity-70 text-white p-3 rounded-full shadow-lg hover:bg-opacity-100 transition focus:outline-none focus:ring-2 focus:ring-blue-400">
@@ -319,6 +326,7 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
                 <div class="absolute bottom-4 left-1/2 -translate-x-1/2 flex space-x-2">
                     <button class="carousel-dot w-3 h-3 bg-gray-500 rounded-full hover:bg-blue-400 transition focus:outline-none focus:ring-2 focus:ring-blue-400" data-index="0" aria-label="Go to slide 1"></button>
                     <button class="carousel-dot w-3 h-3 bg-gray-500 rounded-full hover:bg-blue-400 transition focus:outline-none focus:ring-2 focus:ring-blue-400" data-index="1" aria-label="Go to slide 2"></button>
+                    <button class="carousel-dot w-3 h-3 bg-gray-500 rounded-full hover:bg-blue-400 transition focus:outline-none focus:ring-2 focus:ring-blue-400" data-index="2" aria-label="Go to slide 3"></button>
                     <button class="carousel-dot w-3 h-3 bg-gray-500 rounded-full hover:bg-blue-400 transition focus:outline-none focus:ring-2 focus:ring-blue-400" data-index="2" aria-label="Go to slide 3"></button>
                     </div>
             </div>
