--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             background-position: center;
             background-repeat: no-repeat;
             /* IMPORTANT: This is now your profile photo as the background */
-            background-image: url("images/coverphoto.jpeg"); /* Using a wider placeholder for background */
+            background-image: url("coverphoto.jpeg"); /* Using a wider placeholder for background */
         }
 
         .image-overlay {
@@ -284,7 +284,7 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
             <div class="relative w-full max-w-4xl mx-auto overflow-hidden rounded-xl card-shadow">
                 <div id="photoCarousel" class="flex transition-transform duration-500 ease-in-out">
                     <div class="carousel-item">
-                        <img src="images/p1.jpeg" alt="[Descriptive Alt Text for Photo 1]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <img src="p1.jpeg" alt="[Descriptive Alt Text for Photo 1]" class="w-full h-[500px] object-cover rounded-t-xl" />
                         <div class="p-8 bg-gray-900 rounded-b-xl">
                             <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 1</h4>
                             <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
@@ -292,7 +292,7 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
                     </div>
 
                     <div class="carousel-item">
-                        <img src="images/p2.jpeg" alt="[Descriptive Alt Text for Photo 2]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <img src="p2.jpeg" alt="[Descriptive Alt Text for Photo 2]" class="w-full h-[500px] object-cover rounded-t-xl" />
                         <div class="p-8 bg-gray-900 rounded-b-xl">
                             <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 2</h4>
                             <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
@@ -300,7 +300,7 @@ I am committed to storytelling that informs, empowers, and drives impact. If you
                     </div>
 
                     <div class="carousel-item">
-                        <img src="images/p3.jpeg" alt="[Descriptive Alt Text for Photo 3]" class="w-full h-[500px] object-cover rounded-t-xl" />
+                        <img src="p3.jpeg" alt="[Descriptive Alt Text for Photo 3]" class="w-full h-[500px] object-cover rounded-t-xl" />
                         <div class="p-8 bg-gray-900 rounded-b-xl">
                             <h4 class="text-2xl font-bold text-white mb-3">Photo Series Title 3</h4>
                             <p class="text-gray-400 mb-4 text-base">Brief description of the photo series or individual photo.</p>
